@@ -264,7 +264,8 @@ int voikko_spell_ucs4(int handle, const wchar_t * word) {
 		}
 	}
 	caps = voikko_casetype(nword, nchars);
-	if (voikko_options.ignore_uppercase && caps == CT_ALL_UPPER){
+	if ((voikko_options.ignore_uppercase && caps == CT_ALL_UPPER) ||
+	    (voikko_options.ignore_nonwords && !voikko_is_nonword(nword, nchars))) {
 		free(nword);
 		EXIT_V
 		return VOIKKO_SPELL_OK;
