@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH VOIKKOSPELL 1 "2007-07-08"
+.TH VOIKKOSPELL 1 "2007-11-27"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -76,6 +76,8 @@ as the value of option VOIKKO_INTERSECT_COMPOUND_LEVEL.
 .BI ignore_dot= n
 .TP
 .BI ignore_numbers= n
+.TP
+.BI ignore_nonwords= n
 (voikkospell)
 .TP
 .BI accept_first_uppercase= n
